--- a/Plastik-HB FE/cypress/tsconfig.json
+++ b/Plastik-HB FE/cypress/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  // "extends": "@vue/tsconfig/tsconfig.dom.json",
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["./e2e/**/*", "./support/**/*"],
   "exclude": ["./support/component.*"],
   "compilerOptions": {
