--- a/Plastik-HB FE/package.json
+++ b/Plastik-HB FE/package.json
@@ -17,7 +17,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "@mdi/font": "^7.4.47",
+    "vue": "^3.5.17",
+    "vuetify": "^3.9.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
@@ -41,6 +43,7 @@
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7",
+    "vite-plugin-vuetify": "^2.1.1",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.10"
   }
