--- a/Plastik-HB-FE/package.json
+++ b/Plastik-HB-FE/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@fontsource/roboto": "5.2.6",
     "@mdi/font": "7.4.47",
+    "echarts": "^5.6.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
+    "vue-echarts": "^7.0.3",
     "vuetify": "^3.9.1"
   },
   "devDependencies": {
