--- a/Plastik-HB-BE/package.json
+++ b/Plastik-HB-BE/package.json
@@ -18,12 +18,12 @@
     "express": "^5.1.0",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3",
     "sequelize-typescript": "^2.1.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
-    "@types/cors": "^2.8.19"
+    "@types/cors": "^2.8.19",
+    "sequelize-cli": "^6.6.3"
   }
 }
