--- a/Plastik-HB-BE/package.json
+++ b/Plastik-HB-BE/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "ts-node app.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate-up": "sequelize db:migrate",
     "migrate-down": "sequelize db:migrate:undo:all"
@@ -12,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -19,13 +23,14 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3",
     "sequelize-typescript": "^2.1.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
+    "sequelize-cli": "^6.6.3",
+    "ts-node": "^10.9.2"
     "@types/multer": "^2.0.0"
   }
 }
