--- a/Plastik-HB-BE/package.json
+++ b/Plastik-HB-BE/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.3",
+    "axios": "^1.11.0",
     "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
