--- a/Plastik-HB-BE/package.json
+++ b/Plastik-HB-BE/package.json
@@ -6,7 +6,7 @@
     "start": "node app.js",
     "dev": "ts-node app.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "migrate-up": "sequelize db:migrate",
     "migrate-down": "sequelize db:migrate:undo:all"
   },
