--- a/Plastik-HB-BE/package.json
+++ b/Plastik-HB-BE/package.json
@@ -15,8 +15,8 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.3",
-    "axios": "^1.11.0",
     "@types/multer": "^2.0.0",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -30,8 +30,13 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
+    "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.0.5",
     "sequelize-cli": "^6.6.3",
-    "ts-node": "^10.9.2",
-    "@types/multer": "^2.0.0"
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2"
   }
 }
