--- a/Plastik-HB-BE/package.json
+++ b/Plastik-HB-BE/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node app.ts",
     "build": "tsc",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "migrate-up": "sequelize db:migrate",
     "migrate-down": "sequelize db:migrate:undo:all"
   },
