--- a/Plastik-HB-BE/package.json
+++ b/Plastik-HB-BE/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
+    "prod": "npm run build && npm run start",
     "dev": "ts-node app.ts",
     "build": "tsc",
     "test": "jest",
